kubernetes/auth-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dpl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: avidyarth/inventory-management-auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
