kubernetes/auth-mongo-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-dpl
spec:
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-svc
spec:
  selector:
    app: auth-mongo
  ports:
    - port: 27017
      targetPort: 27017
