kubernetes/client-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: avidyarth/inventory-management-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
