kubernetes/products-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-dpl
spec:
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: avidyarth/inventory-management-products
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
spec:
  selector:
    app: products
  ports:
    - port: 3000
      targetPort: 3000
