kubernetes/rabbitmq-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-dpl
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
