kubernetes/users-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-dpl
spec:
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: avidyarth/inventory-management-users
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
spec:
  selector:
    app: users
  ports:
    - port: 3000
      targetPort: 3000
